# Py-TwitterBot

./: .gitignore  README.md  __main__.py  docker.py  file_handler.py  firefox_driver.py  logger.py  main.py  pyproject.toml  setup_msi.py  state.py  twitterbot.py  worker.py
following/: following.py
interface/: dummy.py  gui_preferences.py  help.py  layout.py  stats.py  theme.py
login/: creds.py  login.py
plotter/: plot_followers.py
targetting/: target_file.py  targetting.py
tfc/: __main__.py  data.py  state.py
tfc/auth/: auth.py  auth_file_handler.py
tfc/following/: following.py
tfc/interface/: __init__.py  help.py  layout.py  theme.py
tfc/targetting/: target_finding.py  target_finding_file.py
tfc/unfollowing/: unfollowing.py
tfc/util/: caching.py  logger.py  thread.py
tfc/util/plotter/: plot_followers.py
twitterbot/: main.py  worker.py
twitterbot/bot/: file_handler.py  new_scraper.py  twitterbot.py  worker.py
twitterbot/firefox/: firefox_driver.py
twitterbot/interface/: layout.py
twitterbot/plotter/: plot_followers.py
twitterbot/utils/: docker.py  logger.py  thread.py
unfollowing/: unfollowing.py
utils/: caching.py  chrome_driver.py  client_interaction.py  credentials.py  data.py  docker.py  file_cleaning.py  logger.py
utils/plotter/: plot_followers.bat  plot_followers.py
