[tool.poetry]
name = "tfc"
version = "0.1.0"
description = ""
authors = ["Matthew Miglio <matmigg0804@gmail.com>"]
readme = "README.md"
packages = [{include = "tfc"}]


[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.12.1"
pandas = "^1.5.2"
plotly = "^5.12.0"
plotly-express = "^0.4.1"
cx-freeze = "^6.14.1"
kaleido = "0.1.0post1"
pysimplegui = "^4.60.4"
pillow = "^9.4.0"
selenium = "^4.8.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tfc = "tfc.__main__:main" #https://dev.to/bowmanjd/build-command-line-tools-with-python-poetry-4mnc
